--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,29 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f009f4b",
+   "id": "8aa781d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
+    "import shutil\n",
     "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
     "import win32com.client as win32\n",
     "\n",
-    "# Paths (Update these paths)\n",
+    "# File Paths (Update these)\n",
     "input_file = r\"C:\\Path\\To\\Reportnames.xlsx\"\n",
-    "target_file = r\"C:\\Path\\To\\TargetWorkbook.xlsx\"\n",
+    "template_file = r\"C:\\Path\\To\\TemplateWorkbook.xlsx\"\n",
     "output_folder = r\"C:\\Path\\To\\OutputFolder\"\n",
     "\n",
     "# Ensure output folder exists\n",
-    "if not os.path.exists(output_folder):\n",
-    "    os.makedirs(output_folder)\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "# Load input data\n",
+    "# Read input data\n",
     "df = pd.read_excel(input_file, usecols=[\"RTN CODE CHILD\", \"Report Name\"])\n",
     "\n",
-    "# Open Excel Application (COM Object for Refreshing)\n",
+    "# Start Excel application (COM for Refreshing)\n",
     "excel = win32.Dispatch(\"Excel.Application\")\n",
     "excel.Visible = False  # Run in background\n",
     "\n",
@@ -37,44 +37,40 @@
     "    if pd.isna(RTN) or pd.isna(ReportName):  # Skip empty rows\n",
     "        continue\n",
     "\n",
-    "    # Open target workbook\n",
-    "    wb = excel.Workbooks.Open(target_file)\n",
+    "    # Open template workbook\n",
+    "    wb = excel.Workbooks.Open(template_file)\n",
     "    ws = wb.Sheets(\"Setup\")\n",
     "\n",
     "    # Paste values\n",
     "    ws.Range(\"D3\").Value = RTN\n",
     "    ws.Range(\"D4\").Value = ReportName\n",
     "\n",
-    "    # Refresh all external data\n",
+    "    # Refresh data\n",
     "    wb.RefreshAll()\n",
-    "    time.sleep(5)  # Give some time for refresh\n",
+    "    time.sleep(5)  # Wait for refresh\n",
     "\n",
-    "    # Save a temporary copy\n",
+    "    # Save a temporary copy (Retains formatting)\n",
     "    temp_copy_path = os.path.join(output_folder, \"Temp_Copy.xlsx\")\n",
     "    wb.SaveCopyAs(temp_copy_path)\n",
-    "\n",
-    "    # Open the copied workbook to replace formulas with values\n",
-    "    copy_wb = load_workbook(temp_copy_path)\n",
-    "    \n",
-    "    for sheet in copy_wb.sheetnames:\n",
-    "        ws = copy_wb[sheet]\n",
-    "        for row in ws.iter_rows():\n",
-    "            for cell in row:\n",
-    "                cell.value = cell.value  # Replace formula with value\n",
-    "\n",
-    "    # Save the final workbook with ReportName.xlsx\n",
-    "    final_name = f\"{ReportName}.xlsx\"\n",
-    "    final_path = os.path.join(output_folder, final_name)\n",
-    "    copy_wb.save(final_path)\n",
-    "\n",
-    "    # Close workbooks\n",
-    "    copy_wb.close()\n",
     "    wb.Close(SaveChanges=False)\n",
+    "\n",
+    "    # Open the copied workbook in Excel (COM method ensures proper formatting)\n",
+    "    new_wb = excel.Workbooks.Open(temp_copy_path)\n",
+    "\n",
+    "    # Select all sheets and convert formulas to values using \"Paste Special\"\n",
+    "    for sheet in new_wb.Sheets:\n",
+    "        sheet.Cells.Copy()\n",
+    "        sheet.Cells.PasteSpecial(Paste=win32.constants.xlPasteValues)\n",
+    "\n",
+    "    # Save the final file\n",
+    "    final_name = os.path.join(output_folder, f\"{ReportName}.xlsx\")\n",
+    "    new_wb.SaveAs(final_name, FileFormat=51)  # 51 = xlsx format\n",
+    "    new_wb.Close(SaveChanges=True)\n",
     "\n",
     "# Quit Excel\n",
     "excel.Quit()\n",
     "\n",
-    "print(\"Process completed successfully!\")\n"
+    "print(\"All files processed successfully!\")\n"
    ]
   },
   {
