--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,74 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa781d0",
+   "id": "1e6073cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
-    "import shutil\n",
-    "import pandas as pd\n",
-    "from openpyxl import load_workbook\n",
-    "import win32com.client as win32\n",
+    "import win32com.client\n",
     "\n",
-    "# File Paths (Update these)\n",
-    "input_file = r\"C:\\Path\\To\\Reportnames.xlsx\"\n",
-    "template_file = r\"C:\\Path\\To\\TemplateWorkbook.xlsx\"\n",
-    "output_folder = r\"C:\\Path\\To\\OutputFolder\"\n",
+    "# File paths\n",
+    "input_file = r\"C:\\path\\to\\Reportnames.xlsx\"  # Update path\n",
+    "template_file = r\"C:\\path\\to\\Template.xlsx\"  # Workbook to modify\n",
+    "output_folder = r\"C:\\path\\to\\Output\\\"  # Folder for output files\n",
     "\n",
     "# Ensure output folder exists\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
     "\n",
-    "# Read input data\n",
-    "df = pd.read_excel(input_file, usecols=[\"RTN CODE CHILD\", \"Report Name\"])\n",
+    "# Open Excel\n",
+    "excel = win32com.client.Dispatch(\"Excel.Application\")\n",
+    "excel.Visible = False  # Set to True for debugging\n",
     "\n",
-    "# Start Excel application (COM for Refreshing)\n",
-    "excel = win32.Dispatch(\"Excel.Application\")\n",
-    "excel.Visible = False  # Run in background\n",
+    "# Open the input workbook\n",
+    "wb_input = excel.Workbooks.Open(input_file)\n",
+    "ws_input = wb_input.Sheets(1)  # Assuming first sheet has the data\n",
     "\n",
-    "# Loop through each row in input file\n",
-    "for index, row in df.iterrows():\n",
-    "    RTN = row[\"RTN CODE CHILD\"]\n",
-    "    ReportName = row[\"Report Name\"]\n",
+    "# Read data from input file\n",
+    "row = 2  # Start from A2, B2\n",
+    "while ws_input.Cells(row, 1).Value is not None:\n",
+    "    rtn_code = ws_input.Cells(row, 1).Value  # Column A\n",
+    "    report_name = ws_input.Cells(row, 2).Value  # Column B\n",
     "\n",
-    "    if pd.isna(RTN) or pd.isna(ReportName):  # Skip empty rows\n",
-    "        continue\n",
+    "    # Open the template workbook\n",
+    "    wb_template = excel.Workbooks.Open(template_file)\n",
+    "    ws_setup = wb_template.Sheets(\"Setup\")\n",
     "\n",
-    "    # Open template workbook\n",
-    "    wb = excel.Workbooks.Open(template_file)\n",
-    "    ws = wb.Sheets(\"Setup\")\n",
+    "    # Insert values into \"Setup\" sheet\n",
+    "    ws_setup.Range(\"D3\").Value = rtn_code\n",
+    "    ws_setup.Range(\"D4\").Value = report_name\n",
     "\n",
-    "    # Paste values\n",
-    "    ws.Range(\"D3\").Value = RTN\n",
-    "    ws.Range(\"D4\").Value = ReportName\n",
+    "    # Refresh workbook\n",
+    "    excel.CalculateFull()\n",
     "\n",
-    "    # Refresh data\n",
-    "    wb.RefreshAll()\n",
-    "    time.sleep(5)  # Wait for refresh\n",
+    "    # Remove formulas and keep values\n",
+    "    for sheet in wb_template.Sheets:\n",
+    "        for cell in sheet.UsedRange:\n",
+    "            if not cell.MergeCells:  # Skip merged cells\n",
+    "                cell.Value = cell.Value  \n",
     "\n",
-    "    # Save a temporary copy (Retains formatting)\n",
-    "    temp_copy_path = os.path.join(output_folder, \"Temp_Copy.xlsx\")\n",
-    "    wb.SaveCopyAs(temp_copy_path)\n",
-    "    wb.Close(SaveChanges=False)\n",
+    "    # Save as new file\n",
+    "    output_file = os.path.join(output_folder, f\"{report_name}.xlsx\")\n",
+    "    wb_template.SaveAs(output_file)\n",
     "\n",
-    "    # Open the copied workbook in Excel (COM method ensures proper formatting)\n",
-    "    new_wb = excel.Workbooks.Open(temp_copy_path)\n",
+    "    # Close the template file\n",
+    "    wb_template.Close(SaveChanges=False)\n",
     "\n",
-    "    # Select all sheets and convert formulas to values using \"Paste Special\"\n",
-    "    for sheet in new_wb.Sheets:\n",
-    "        sheet.Cells.Copy()\n",
-    "        sheet.Cells.PasteSpecial(Paste=win32.constants.xlPasteValues)\n",
+    "    print(f\"Saved: {output_file}\")\n",
     "\n",
-    "    # Save the final file\n",
-    "    final_name = os.path.join(output_folder, f\"{ReportName}.xlsx\")\n",
-    "    new_wb.SaveAs(final_name, FileFormat=51)  # 51 = xlsx format\n",
-    "    new_wb.Close(SaveChanges=True)\n",
+    "    row += 1  # Move to next row\n",
     "\n",
-    "# Quit Excel\n",
+    "# Close input file\n",
+    "wb_input.Close(SaveChanges=False)\n",
     "excel.Quit()\n",
     "\n",
-    "print(\"All files processed successfully!\")\n"
+    "print(\"Processing complete!\")\n"
    ]
   },
   {
