--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,69 +3,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e6073cb",
+   "id": "44b2acef",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import win32com.client\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import win32com.client as win32\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# File paths\n",
-    "input_file = r\"C:\\path\\to\\Reportnames.xlsx\"  # Update path\n",
-    "template_file = r\"C:\\path\\to\\Template.xlsx\"  # Workbook to modify\n",
-    "output_folder = r\"C:\\path\\to\\Output\\\"  # Folder for output files\n",
+    "# File Paths\n",
+    "input_file = r\"C:\\path\\to\\Reportnames.xlsx\"  # Change this path\n",
+    "template_file = r\"C:\\path\\to\\Template.xlsx\"  # Change this path\n",
+    "output_folder = r\"C:\\path\\to\\Output\"  # Change this path\n",
     "\n",
     "# Ensure output folder exists\n",
-    "if not os.path.exists(output_folder):\n",
-    "    os.makedirs(output_folder)\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "# Open Excel\n",
-    "excel = win32com.client.Dispatch(\"Excel.Application\")\n",
-    "excel.Visible = False  # Set to True for debugging\n",
+    "# Read Reportnames.xlsx using pandas\n",
+    "df = pd.read_excel(input_file, usecols=[\"RTN CODE CHILD\", \"Report Name\"])\n",
     "\n",
-    "# Open the input workbook\n",
-    "wb_input = excel.Workbooks.Open(input_file)\n",
-    "ws_input = wb_input.Sheets(1)  # Assuming first sheet has the data\n",
+    "# Launch Excel\n",
+    "excel = win32.Dispatch(\"Excel.Application\")\n",
+    "excel.Visible = False  # Set True for debugging\n",
+    "excel.DisplayAlerts = False  # Prevent popups\n",
     "\n",
-    "# Read data from input file\n",
-    "row = 2  # Start from A2, B2\n",
-    "while ws_input.Cells(row, 1).Value is not None:\n",
-    "    rtn_code = ws_input.Cells(row, 1).Value  # Column A\n",
-    "    report_name = ws_input.Cells(row, 2).Value  # Column B\n",
+    "try:\n",
+    "    for index, row in df.iterrows():\n",
+    "        rtn_code = row[\"RTN CODE CHILD\"]\n",
+    "        report_name = row[\"Report Name\"]\n",
+    "        output_file = os.path.join(output_folder, f\"{report_name}.xlsx\")\n",
     "\n",
-    "    # Open the template workbook\n",
-    "    wb_template = excel.Workbooks.Open(template_file)\n",
-    "    ws_setup = wb_template.Sheets(\"Setup\")\n",
+    "        if os.path.exists(output_file):  # Skip if file already exists\n",
+    "            print(f\"Skipping {report_name}.xlsx (already exists)\")\n",
+    "            continue\n",
     "\n",
-    "    # Insert values into \"Setup\" sheet\n",
-    "    ws_setup.Range(\"D3\").Value = rtn_code\n",
-    "    ws_setup.Range(\"D4\").Value = report_name\n",
+    "        print(f\"Processing: {report_name}\")\n",
     "\n",
-    "    # Refresh workbook\n",
-    "    excel.CalculateFull()\n",
+    "        # Open the template file\n",
+    "        wb = excel.Workbooks.Open(template_file)\n",
+    "        ws = wb.Sheets(\"Setup\")\n",
     "\n",
-    "    # Remove formulas and keep values\n",
-    "    for sheet in wb_template.Sheets:\n",
-    "        for cell in sheet.UsedRange:\n",
-    "            if not cell.MergeCells:  # Skip merged cells\n",
-    "                cell.Value = cell.Value  \n",
+    "        # Insert values in Setup sheet\n",
+    "        ws.Range(\"D3\").Value = rtn_code\n",
+    "        ws.Range(\"D4\").Value = report_name\n",
     "\n",
-    "    # Save as new file\n",
-    "    output_file = os.path.join(output_folder, f\"{report_name}.xlsx\")\n",
-    "    wb_template.SaveAs(output_file)\n",
+    "        # Refresh workbook (with timeout handling)\n",
+    "        start_time = time.time()\n",
+    "        excel.CalculateFull()  # Refresh all data\n",
+    "        while time.time() - start_time < 30:  # Timeout of 30 sec\n",
+    "            time.sleep(1)  \n",
     "\n",
-    "    # Close the template file\n",
-    "    wb_template.Close(SaveChanges=False)\n",
+    "        # Save a temporary copy\n",
+    "        temp_file = os.path.join(output_folder, \"temp.xlsx\")\n",
+    "        wb.SaveAs(temp_file)\n",
+    "        wb.Close(SaveChanges=False)\n",
     "\n",
-    "    print(f\"Saved: {output_file}\")\n",
+    "        # Convert all formulas to values using openpyxl\n",
+    "        wb_openpyxl = load_workbook(temp_file)\n",
+    "        for sheet in wb_openpyxl.sheetnames:\n",
+    "            ws = wb_openpyxl[sheet]\n",
+    "            for row in ws.iter_rows():\n",
+    "                for cell in row:\n",
+    "                    if cell.data_type == \"f\":  # Check if cell has formula\n",
+    "                        cell.value = cell.value  # Convert to value\n",
     "\n",
-    "    row += 1  # Move to next row\n",
+    "        # Save final file\n",
+    "        final_file = os.path.join(output_folder, f\"{report_name}.xlsx\")\n",
+    "        wb_openpyxl.save(final_file)\n",
+    "        os.remove(temp_file)  # Clean up temp file\n",
     "\n",
-    "# Close input file\n",
-    "wb_input.Close(SaveChanges=False)\n",
-    "excel.Quit()\n",
+    "        print(f\"✅ Saved: {final_file}\")\n",
     "\n",
-    "print(\"Processing complete!\")\n"
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "\n",
+    "finally:\n",
+    "    excel.Quit()\n",
+    "    print(\"Processing complete!\")\n"
    ]
   },
   {
