--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -11,7 +11,6 @@
     "import time\n",
     "import pandas as pd\n",
     "import win32com.client as win32\n",
-    "from openpyxl import load_workbook\n",
     "\n",
     "# File Paths\n",
     "input_file = r\"C:\\path\\to\\Reportnames.xlsx\"  # Change this path\n",
@@ -55,26 +54,18 @@
     "        while time.time() - start_time < 30:  # Timeout of 30 sec\n",
     "            time.sleep(1)  \n",
     "\n",
-    "        # Save a temporary copy\n",
-    "        temp_file = os.path.join(output_folder, \"temp.xlsx\")\n",
-    "        wb.SaveAs(temp_file)\n",
-    "        wb.Close(SaveChanges=False)\n",
+    "        # Remove formulas by copying and pasting as values\n",
+    "        for sheet in wb.Sheets:\n",
+    "            sheet.Cells.Copy()\n",
+    "            sheet.Cells.PasteSpecial(Paste=win32.constants.xlPasteValues)\n",
     "\n",
-    "        # Convert all formulas to values using openpyxl\n",
-    "        wb_openpyxl = load_workbook(temp_file)\n",
-    "        for sheet in wb_openpyxl.sheetnames:\n",
-    "            ws = wb_openpyxl[sheet]\n",
-    "            for row in ws.iter_rows():\n",
-    "                for cell in row:\n",
-    "                    if cell.data_type == \"f\":  # Check if cell has formula\n",
-    "                        cell.value = cell.value  # Convert to value\n",
+    "        excel.CutCopyMode = False  # Clear clipboard to prevent errors\n",
     "\n",
     "        # Save final file\n",
-    "        final_file = os.path.join(output_folder, f\"{report_name}.xlsx\")\n",
-    "        wb_openpyxl.save(final_file)\n",
-    "        os.remove(temp_file)  # Clean up temp file\n",
+    "        wb.SaveAs(output_file)\n",
+    "        wb.Close(SaveChanges=False)\n",
     "\n",
-    "        print(f\"✅ Saved: {final_file}\")\n",
+    "        print(f\"✅ Saved: {output_file}\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")\n",
