--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fcbc9c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrames\n",
+    "base_df = pd.DataFrame({\n",
+    "    'Position ID': [101, 102, 103, 104, 101],\n",
+    "    'Category': ['Existing', 'New', 'Existing', 'Existing', 'Existing'],\n",
+    "    'Col_A': [10, 20, 30, 40, 50], \n",
+    "    'Col_B': ['A', 'B', 'C', 'D', 'E']\n",
+    "})\n",
+    "\n",
+    "gha_df = pd.DataFrame({\n",
+    "    'Position ID': [101, 103, 104],\n",
+    "    'New_Col_A': [100, 300, 400], \n",
+    "    'New_Col_B': ['X', 'Y', 'Z']\n",
+    "})\n",
+    "\n",
+    "# Define columns to update (Map GHA column names to Base column names)\n",
+    "update_cols = {'New_Col_A': 'Col_A', 'New_Col_B': 'Col_B'}\n",
+    "gha_df = gha_df.rename(columns=update_cols)\n",
+    "\n",
+    "# Filter only 'Existing' records\n",
+    "existing_mask = base_df['Category'] == 'Existing'\n",
+    "existing_df = base_df[existing_mask]\n",
+    "\n",
+    "# Merge with GHA data on 'Position ID'\n",
+    "updated_data = existing_df.merge(gha_df, on='Position ID', how='left', suffixes=('', '_new'))\n",
+    "\n",
+    "# Ensure duplicates have the same updated value\n",
+    "for old_col in update_cols.values():\n",
+    "    new_col = old_col + '_new'\n",
+    "    updated_data[old_col] = updated_data.groupby('Position ID')[new_col].transform('first')\n",
+    "\n",
+    "# Drop extra columns\n",
+    "updated_data = updated_data.drop(columns=[col + '_new' for col in update_cols.values()])\n",
+    "\n",
+    "# Replace updated rows in base_df\n",
+    "base_df.loc[existing_mask, update_cols.values()] = updated_data[update_cols.values()]\n",
+    "\n",
+    "print(base_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "44b2acef",
    "metadata": {},
    "outputs": [],
