--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ed79abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Position ID  PSID  Category  Salary Department\n",
+      "0          101   501  Existing   50000         HR\n",
+      "1          101   502  Existing   52000         HR\n",
+      "2          102   601  Existing   60000         IT\n",
+      "3          102   601  Existing   60000         IT\n",
+      "4          103   701       New   70000    Finance\n",
+      "5          104   801  Existing   80000      Sales\n",
+      "6          105   901  Existing   90000  Marketing\n",
+      "\n",
+      "\n",
+      "   Position ID  PSID  Salary        Department\n",
+      "0          101   501   52000                HR\n",
+      "1          101   502   54000                HR\n",
+      "2          102   601   62000              Tech\n",
+      "3          102   602   63000              Tech\n",
+      "4          103   701   70000           Finance\n",
+      "5          104   801   82000      Global Sales\n",
+      "6          105   901   92000  Market Expansion\n",
+      "\n",
+      "\n",
+      "   Position ID  PSID  Category  Salary        Department\n",
+      "0          101   501  Existing   52000                HR\n",
+      "1          101   502  Existing   54000                HR\n",
+      "2          102   601  Existing   62000              Tech\n",
+      "3          102   602  Existing   63000              Tech\n",
+      "4          104   801  Existing   82000      Global Sales\n",
+      "5          105   901  Existing   92000  Market Expansion\n",
+      "6          103   701       New   70000           Finance\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample new_df (Existing records that need updating)\n",
+    "new_df = pd.DataFrame({\n",
+    "    'Position ID': [101, 101, 102, 102, 103, 104, 105],\n",
+    "    'PSID': [501, 502, 601, 601, 701, 801, 901],  # Two rows with same Position ID but different people\n",
+    "    'Category': ['Existing', 'Existing', 'Existing', 'Existing', 'New', 'Existing', 'Existing'],\n",
+    "    'Salary': [50000, 52000, 60000, 60000, 70000, 80000, 90000],  # Needs updating for 'Existing' category\n",
+    "    'Department': ['HR', 'HR', 'IT', 'IT', 'Finance', 'Sales', 'Marketing']\n",
+    "})\n",
+    "\n",
+    "# Sample source_df (Latest updated data)\n",
+    "source_df = pd.DataFrame({\n",
+    "    'Position ID': [101, 101, 102, 102, 103, 104, 105],  # Same Position IDs\n",
+    "    'PSID': [501, 502, 601, 602, 701, 801, 901],  # Updated PSIDs\n",
+    "    'Salary': [52000, 54000, 62000, 63000, 70000, 82000, 92000],  # Updated Salary\n",
+    "    'Department': ['HR', 'HR', 'Tech', 'Tech', 'Finance', 'Global Sales', 'Market Expansion']\n",
+    "})\n",
+    "\n",
+    "# Step 1: Keep \"New\" category as is\n",
+    "new_records = new_df[new_df['Category'] == 'New']\n",
+    "\n",
+    "# Step 2: Process \"Existing\" category separately\n",
+    "existing_records = new_df[new_df['Category'] == 'Existing']\n",
+    "\n",
+    "# Step 3: Use Position ID to fetch latest data\n",
+    "updated_existing = existing_records.drop(columns=['PSID', 'Salary', 'Department']) \\\n",
+    "    .merge(source_df, on='Position ID', how='left')\n",
+    "\n",
+    "# Step 4: Drop duplicates that arise due to multiple mappings\n",
+    "updated_existing = updated_existing.drop_duplicates()\n",
+    "\n",
+    "# Step 5: Combine with \"New\" category records\n",
+    "final_df = pd.concat([updated_existing, new_records], ignore_index=True)\n",
+    "\n",
+    "# Step 6: Ensure correct column order\n",
+    "final_df = final_df[new_df.columns]\n",
+    "print(new_df)\n",
+    "print(\"\\n\")\n",
+    "print(source_df)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Step 7: Print final updated DataFrame\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "6fcbc9c1",
    "metadata": {},
