--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,90 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7ed79abd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Position ID  PSID  Category  Salary Department\n",
-      "0          101   501  Existing   50000         HR\n",
-      "1          101   502  Existing   52000         HR\n",
-      "2          102   601  Existing   60000         IT\n",
-      "3          102   601  Existing   60000         IT\n",
-      "4          103   701       New   70000    Finance\n",
-      "5          104   801  Existing   80000      Sales\n",
-      "6          105   901  Existing   90000  Marketing\n",
-      "\n",
-      "\n",
-      "   Position ID  PSID  Salary        Department\n",
-      "0          101   501   52000                HR\n",
-      "1          101   502   54000                HR\n",
-      "2          102   601   62000              Tech\n",
-      "3          102   602   63000              Tech\n",
-      "4          103   701   70000           Finance\n",
-      "5          104   801   82000      Global Sales\n",
-      "6          105   901   92000  Market Expansion\n",
-      "\n",
-      "\n",
-      "   Position ID  PSID  Category  Salary        Department\n",
-      "0          101   501  Existing   52000                HR\n",
-      "1          101   502  Existing   54000                HR\n",
-      "2          102   601  Existing   62000              Tech\n",
-      "3          102   602  Existing   63000              Tech\n",
-      "4          104   801  Existing   82000      Global Sales\n",
-      "5          105   901  Existing   92000  Market Expansion\n",
-      "6          103   701       New   70000           Finance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import math\n",
+    "import datetime\n",
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
     "\n",
-    "# Sample new_df (Existing records that need updating)\n",
-    "new_df = pd.DataFrame({\n",
-    "    'Position ID': [101, 101, 102, 102, 103, 104, 105],\n",
-    "    'PSID': [501, 502, 601, 601, 701, 801, 901],  # Two rows with same Position ID but different people\n",
-    "    'Category': ['Existing', 'Existing', 'Existing', 'Existing', 'New', 'Existing', 'Existing'],\n",
-    "    'Salary': [50000, 52000, 60000, 60000, 70000, 80000, 90000],  # Needs updating for 'Existing' category\n",
-    "    'Department': ['HR', 'HR', 'IT', 'IT', 'Finance', 'Sales', 'Marketing']\n",
-    "})\n",
+    "# Example source data with optional 'PID' column\n",
+    "data = {\n",
+    "    \"FTE\": [1, -1, 3, 0, None, 10],  # Note: Third row has invalid FTE for PID logic\n",
+    "    \"Type\": [\"BC-TT\", \"Investments\", \"Saves\", \"Other\", \"Saves\", \"BC-TT\"],\n",
+    "    \"GM\": [0, 0, 0, 0, 0, 1],\n",
+    "    \"MD\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"3\": [0, 0, 0, 0, 0, 2],\n",
+    "    \"4\": [2.5, -4, 0, 0, 0, 0],\n",
+    "    \"5\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"6\": [3, -6, 0, 0, 0, 3],\n",
+    "    \"7\": [1, -1, 1, 0, 0, 4],\n",
+    "    \"8\": [0, -1.3, 0, 0, 0, 0],\n",
+    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\", \"Entity4\", \"Entity5\", \"Entity6\"],\n",
+    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\", \"Example 4\", \"Example 5\", \"Example 6\"],\n",
+    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\", \"Country4\", \"Country5\", \"Country6\"],\n",
+    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\", \"RTN 101 - Case\", \"RTN 112 - Trial\", \"RTN 113 - Check\"],\n",
+    "    \"PID\": [1001, 1002, 1003, None, None, 1004]  # PID is optional\n",
+    "}\n",
     "\n",
-    "# Sample source_df (Latest updated data)\n",
-    "source_df = pd.DataFrame({\n",
-    "    'Position ID': [101, 101, 102, 102, 103, 104, 105],  # Same Position IDs\n",
-    "    'PSID': [501, 502, 601, 602, 701, 801, 901],  # Updated PSIDs\n",
-    "    'Salary': [52000, 54000, 62000, 63000, 70000, 82000, 92000],  # Updated Salary\n",
-    "    'Department': ['HR', 'HR', 'Tech', 'Tech', 'Finance', 'Global Sales', 'Market Expansion']\n",
-    "})\n",
+    "source_df = pd.DataFrame(data)\n",
     "\n",
-    "# Step 1: Keep \"New\" category as is\n",
-    "new_records = new_df[new_df['Category'] == 'New']\n",
+    "# Columns to check for GCB values\n",
+    "gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
     "\n",
-    "# Step 2: Process \"Existing\" category separately\n",
-    "existing_records = new_df[new_df['Category'] == 'Existing']\n",
+    "# Clean and convert FTE column\n",
+    "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
-    "# Step 3: Use Position ID to fetch latest data\n",
-    "updated_existing = existing_records.drop(columns=['PSID', 'Salary', 'Department']) \\\n",
-    "    .merge(source_df, on='Position ID', how='left')\n",
+    "# Check if 'PID' exists in source_df\n",
+    "if \"PID\" in source_df.columns:\n",
+    "    # Identify rows where PID exists but FTE is not 1 or -1\n",
+    "    invalid_pid_fte = source_df[(source_df[\"PID\"].notnull()) & (~source_df[\"FTE\"].isin([1, -1]))]\n",
     "\n",
-    "# Step 4: Drop duplicates that arise due to multiple mappings\n",
-    "updated_existing = updated_existing.drop_duplicates()\n",
+    "    if not invalid_pid_fte.empty:\n",
+    "        # Show a message box to notify the user about the issue\n",
+    "        root = tk.Tk()\n",
+    "        root.withdraw()  # Hide the main window\n",
+    "        messagebox.showerror(\n",
+    "            \"FTE Mismatch\",\n",
+    "            \"There is a mismatch between PID and FTE values. \\nFTE should be exactly 1 or -1 when PID is present.\"\n",
+    "        )\n",
+    "        root.destroy()\n",
+    "    else:\n",
+    "        # Only keep valid rows\n",
+    "        source_df = source_df[(source_df[\"PID\"].isnull()) | (source_df[\"FTE\"].isin([1, -1]))]\n",
     "\n",
-    "# Step 5: Combine with \"New\" category records\n",
-    "final_df = pd.concat([updated_existing, new_records], ignore_index=True)\n",
+    "# Filter rows where FTE is valid and does not equal 0\n",
+    "filtered_df = source_df[\n",
+    "    source_df[\"FTE\"].notnull() & (source_df[\"FTE\"] != 0) & (source_df[\"Type\"].isin([\"BC-TT\", \"Investments\", \"Saves\"]))\n",
+    "]\n",
     "\n",
-    "# Step 6: Ensure correct column order\n",
-    "final_df = final_df[new_df.columns]\n",
-    "print(new_df)\n",
-    "print(\"\\n\")\n",
-    "print(source_df)\n",
-    "print(\"\\n\")\n",
+    "# Create the template dataframe with required columns\n",
+    "template_columns = [\n",
+    "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
+    "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
+    "    \"GCB\", \"Emp. Type\", \"Hiring Source\", \"FTE\", \"Start Month\",\n",
+    "    \"WPB\", \"GBM\", \"CMB\", \"Diver\", \"Entity\", \"Description\", \"Position ID\"\n",
+    "] if \"PID\" in source_df.columns else [\n",
+    "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
+    "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
+    "    \"GCB\", \"Emp. Type\", \"Hiring Source\", \"FTE\", \"Start Month\",\n",
+    "    \"WPB\", \"GBM\", \"CMB\", \"Diver\", \"Entity\", \"Description\"\n",
+    "]\n",
     "\n",
-    "# Step 7: Print final updated DataFrame\n",
-    "print(final_df)\n"
+    "template_df = pd.DataFrame(columns=template_columns)\n",
+    "\n",
+    "# Process each row in the filtered dataframe\n",
+    "for _, row in filtered_df.iterrows():\n",
+    "    fte_value = row[\"FTE\"]\n",
+    "    duplicate_fte = -1 if fte_value < 0 else 1  # Determine positive or negative FTE\n",
+    "    abs_fte = abs(fte_value)\n",
+    "    int_part = math.floor(abs_fte)  # Integer part of FTE\n",
+    "    fractional_part = abs_fte - int_part  # Fractional part of FTE\n",
+    "\n",
+    "    # Calculate GCB distribution\n",
+    "    gcb_distribution = []\n",
+    "    for col in gcb_columns:\n",
+    "        value = pd.to_numeric(row[col], errors=\"coerce\")  # Convert to numeric, handle non-numeric gracefully\n",
+    "        if not pd.isna(value) and value != 0:\n",
+    "            gcb_distribution.extend([col] * abs(math.ceil(value)))\n",
+    "\n",
+    "    # Ensure GCB distribution matches the FTE rows\n",
+    "    total_required_rows = int_part + (1 if fractional_part > 0 else 0)\n",
+    "    if len(gcb_distribution) < total_required_rows:\n",
+    "        gcb_distribution.extend([\"na\"] * (total_required_rows - len(gcb_distribution)))\n",
+    "\n",
+    "    # Dynamically calculate Start Month\n",
+    "    current_year = 2025\n",
+    "    if fte_value > 0:\n",
+    "        start_month = datetime.date(current_year, 1, 31).strftime(\"%m/%d/%Y\")  # Example logic for positive FTE\n",
+    "    elif fte_value < 0:\n",
+    "        start_month = datetime.date(current_year, 2, 28).strftime(\"%m/%d/%Y\")  # Example logic for negative FTE\n",
+    "    else:\n",
+    "        start_month = datetime.date(current_year, 12, 31).strftime(\"%m/%d/%Y\")  # Default fallback\n",
+    "\n",
+    "    # Create rows in the template\n",
+    "    for i in range(total_required_rows):\n",
+    "        current_fte = (\n",
+    "            fractional_part if i == total_required_rows - 1 and fractional_part > 0 else 1\n",
+    "        ) * duplicate_fte\n",
+    "\n",
+    "        big_grid_stack = (\n",
+    "            \"New Perm Position (within FRP) - Staff Drawdown\" if current_fte > 0\n",
+    "            else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
+    "        )\n",
+    "        if row[\"Type\"] == \"BC-TT\":\n",
+    "            big_grid_stack = \"Inter Boundary Changes\"\n",
+    "\n",
+    "        new_row = {\n",
+    "            \"Big Grid Stack\": big_grid_stack,\n",
+    "            \"AOP YEAR\": \"FY25\",\n",
+    "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
+    "            \"Business Framework\": \"\",\n",
+    "            \"Business Framework Group\": \"\",\n",
+    "            \"Country\": row[\"Country\"],\n",
+    "            \"GCB\": gcb_distribution[i],\n",
+    "            \"Emp. Type\": \"FTE\",\n",
+    "            \"Hiring Source\": \"External\",\n",
+    "            \"FTE\": current_fte,\n",
+    "            \"Start Month\": start_month,\n",
+    "            \"WPB\": \"0%\",\n",
+    "            \"GBM\": \"100.00%\",\n",
+    "            \"CMB\": \"0%\",\n",
+    "            \"Diver\": \"\",\n",
+    "            \"Entity\": row[\"Entity\"],\n",
+    "            \"Description\": row[\"Description\"],\n",
+    "        }\n",
+    "\n",
+    "        # Add 'Position ID' if 'PID' exists\n",
+    "        if \"PID\" in source_df.columns:\n",
+    "            new_row[\"Position ID\"] = row[\"PID\"] if pd.notna(row[\"PID\"]) else \"\"\n",
+    "\n",
+    "        template_df = pd.concat([template_df, pd.DataFrame([new_row])], ignore_index=True)\n",
+    "\n",
+    "# Output the result\n",
+    "print(template_df)\n"
    ]
   },
   {
