--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,9 +3,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed79abd",
+   "id": "27e4ddde",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from itertools import product\n",
+    "\n",
+    "# Load the Excel file\n",
+    "file_path = \"your_file.xlsx\"  # Change this to your actual file path\n",
+    "xls = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Read required columns from respective sheets\n",
+    "rtn_values = xls.parse(\"RTN\")[\"RTN\"].dropna().unique()\n",
+    "country_values = xls.parse(\"Location\")[\"Country\"].dropna().unique()\n",
+    "gcb_values = xls.parse(\"GCB\")[\"GCB\"].dropna().unique()\n",
+    "\n",
+    "# Generate all possible combinations\n",
+    "combinations = list(product(rtn_values, country_values, gcb_values))\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "output_df = pd.DataFrame(combinations, columns=[\"RTN\", \"Country\", \"GCB\"])\n",
+    "\n",
+    "# Save to the same workbook\n",
+    "with pd.ExcelWriter(file_path, mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
+    "    output_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "\n",
+    "print(\"Output sheet created successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7ed79abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       Big Grid Stack AOP YEAR  \\\n",
+      "0                              Inter Boundary Changes     FY25   \n",
+      "1   Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "2     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "3     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "4     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "5                              Inter Boundary Changes     FY25   \n",
+      "6                              Inter Boundary Changes     FY25   \n",
+      "7                              Inter Boundary Changes     FY25   \n",
+      "8                              Inter Boundary Changes     FY25   \n",
+      "9                              Inter Boundary Changes     FY25   \n",
+      "10                             Inter Boundary Changes     FY25   \n",
+      "11                             Inter Boundary Changes     FY25   \n",
+      "12                             Inter Boundary Changes     FY25   \n",
+      "13                             Inter Boundary Changes     FY25   \n",
+      "14                             Inter Boundary Changes     FY25   \n",
+      "\n",
+      "   Business Framework RTN Code Business Framework Business Framework Group  \\\n",
+      "0                          RTN                                               \n",
+      "1                          RTN                                               \n",
+      "2                          RTN                                               \n",
+      "3                          RTN                                               \n",
+      "4                          RTN                                               \n",
+      "5                          RTN                                               \n",
+      "6                          RTN                                               \n",
+      "7                          RTN                                               \n",
+      "8                          RTN                                               \n",
+      "9                          RTN                                               \n",
+      "10                         RTN                                               \n",
+      "11                         RTN                                               \n",
+      "12                         RTN                                               \n",
+      "13                         RTN                                               \n",
+      "14                         RTN                                               \n",
+      "\n",
+      "     Country GCB Emp. Type Hiring Source FTE Start Month WPB      GBM CMB  \\\n",
+      "0   Country1   4       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "1   Country2   4       FTE      External  -1  02/28/2025  0%  100.00%  0%   \n",
+      "2   Country3   7       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "3   Country3  na       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "4   Country3  na       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "5   Country6  GM       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "6   Country6   3       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "7   Country6   3       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "8   Country6   6       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "9   Country6   6       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "10  Country6   6       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "11  Country6   7       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "12  Country6   7       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "13  Country6   7       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "14  Country6   7       FTE      External   1  01/31/2025  0%  100.00%  0%   \n",
+      "\n",
+      "   Diver   Entity Description  Position ID  \n",
+      "0         Entity1   Example 1       1001.0  \n",
+      "1         Entity2   Example 2       1002.0  \n",
+      "2         Entity3   Example 3       1003.0  \n",
+      "3         Entity3   Example 3       1003.0  \n",
+      "4         Entity3   Example 3       1003.0  \n",
+      "5         Entity6   Example 6       1004.0  \n",
+      "6         Entity6   Example 6       1004.0  \n",
+      "7         Entity6   Example 6       1004.0  \n",
+      "8         Entity6   Example 6       1004.0  \n",
+      "9         Entity6   Example 6       1004.0  \n",
+      "10        Entity6   Example 6       1004.0  \n",
+      "11        Entity6   Example 6       1004.0  \n",
+      "12        Entity6   Example 6       1004.0  \n",
+      "13        Entity6   Example 6       1004.0  \n",
+      "14        Entity6   Example 6       1004.0  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import math\n",
