--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,18 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e4ddde",
+   "id": "31fb0c8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from itertools import product\n",
+    "from openpyxl import load_workbook\n",
     "\n",
     "# Load the Excel file\n",
-    "file_path = \"your_file.xlsx\"  # Change this to your actual file path\n",
-    "xls = pd.ExcelFile(file_path)\n",
+    "file_path = \"your_file.xlsx\"  # Update with your actual file path\n",
     "\n",
-    "# Read required columns from respective sheets\n",
+    "# Read the required columns from respective sheets\n",
+    "xls = pd.ExcelFile(file_path)\n",
     "rtn_values = xls.parse(\"RTN\")[\"RTN\"].dropna().unique()\n",
     "country_values = xls.parse(\"Location\")[\"Country\"].dropna().unique()\n",
     "gcb_values = xls.parse(\"GCB\")[\"GCB\"].dropna().unique()\n",
@@ -25,9 +26,25 @@
     "# Create a DataFrame\n",
     "output_df = pd.DataFrame(combinations, columns=[\"RTN\", \"Country\", \"GCB\"])\n",
     "\n",
-    "# Save to the same workbook\n",
-    "with pd.ExcelWriter(file_path, mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
-    "    output_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "# Load the existing workbook\n",
+    "wb = load_workbook(file_path)\n",
+    "\n",
+    "# Remove the existing \"Output\" sheet if it exists\n",
+    "if \"Output\" in wb.sheetnames:\n",
+    "    wb.remove(wb[\"Output\"])\n",
+    "\n",
+    "# Create a new sheet\n",
+    "ws = wb.create_sheet(\"Output\")\n",
+    "\n",
+    "# Write column headers\n",
+    "ws.append([\"RTN\", \"Country\", \"GCB\"])\n",
+    "\n",
+    "# Write data rows\n",
+    "for row in output_df.itertuples(index=False, name=None):\n",
+    "    ws.append(row)\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save(file_path)\n",
     "\n",
     "print(\"Output sheet created successfully.\")\n"
    ]
