--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89ff5138",
+   "id": "62eb1d06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load Excel file\n",
+    "file_path = \"your_file.xlsx\"\n",
+    "xls = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Read required sheets\n",
+    "df_conso = pd.read_excel(xls, sheet_name='Conso Data')\n",
+    "df_girs = pd.read_excel(xls, sheet_name=\"GIRS Extract_20 Mar'25\")\n",
+    "df_tier1 = pd.read_excel(xls, sheet_name=\"TIER1_5 Mar'25\")\n",
+    "df_ttrl = pd.read_excel(xls, sheet_name=\"TTRL_3 Mar'25\")\n",
+    "df_pdmr = pd.read_excel(xls, sheet_name=\"PDMR_1Jan'25\", header=None, names=['PDMR'])\n",
+    "\n",
+    "# Data Cleaning & Standardization\n",
+    "df_conso['PSID'] = df_conso['PSID'].astype(str).str.lstrip('0')\n",
+    "df_conso['Resource name'] = df_conso['Resource name'].str.title()\n",
+    "df_pdmr['PDMR'] = df_pdmr['PDMR'].str.lower()\n",
+    "\n",
+    "df_girs['Employee ID'] = df_girs['Employee ID'].astype(str).str.lstrip('0')\n",
+    "df_girs['Insider Name'] = df_girs['Insider Name'].str.title()\n",
+    "\n",
+    "df_tier1['Employee ID'] = df_tier1['Employee ID'].astype(str).str.lstrip('0')\n",
+    "df_tier1['Insider Name'] = df_tier1['Insider Name'].str.title()\n",
+    "\n",
+    "df_ttrl['Employee ID'] = df_ttrl['Employee ID'].astype(str).str.lstrip('0')\n",
+    "df_ttrl['Insider Name'] = df_ttrl['Insider Name'].str.title()\n",
+    "\n",
+    "# Merge Conso Data with GIRS Extract\n",
+    "df_merged = df_conso.merge(df_girs, left_on='PSID', right_on='Employee ID', how='left')\n",
+    "\n",
+    "# Identify status updates\n",
+    "final_records = []\n",
+    "for _, row in df_merged.iterrows():\n",
+    "    psid = row['PSID']\n",
+    "    resource_name = row['Resource name']\n",
+    "    email = row['Email']\n",
+    "    original_status = row['Role'] if pd.notna(row['Role']) else 'Not in GIRS'\n",
+    "    updated_status = row['Status']\n",
+    "    comments = []\n",
+    "    \n",
+    "    if row['TIER1'] == 'Yes' or row['TTRL'] == 'Yes' or resource_name.lower() in df_pdmr['PDMR'].values:\n",
+    "        comments.append(\"Employee in TIER1/TTRL/PDMR\")\n",
+    "    \n",
+    "    if original_status == 'Non-Core' and updated_status == 'DEL':\n",
+    "        updated_status = 'Inactive Insider'\n",
+    "        comments.append(\"Non-Core user marked for deletion\")\n",
+    "    \n",
+    "    if original_status == 'Inactive Insider' and updated_status == 'ADD':\n",
+    "        updated_status = 'Non-Core'\n",
+    "        comments.append(\"Inactive Insider reactivated as Non-Core\")\n",
+    "    \n",
+    "    final_records.append([psid, resource_name, email, original_status, updated_status, ', '.join(comments)])\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "final_df = pd.DataFrame(final_records, columns=['PSID', 'Resource name', 'Email', 'Original Status', 'Updated Status', 'Comments'])\n",
+    "\n",
+    "# Export to Excel\n",
+    "final_df.to_excel(\"Processed_GIRS_Data.xlsx\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce57dc47",
    "metadata": {},
    "outputs": [],
    "source": [
