--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62eb1d06",
+   "id": "83941d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the Excel file\n",
+    "file_path = \"GIRS.xlsx\"\n",
+    "xl = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Load Sheets\n",
+    "conso_data = xl.parse(\"Conso Data\")\n",
+    "girs_data = xl.parse(\"GIRS Extract_20 Mar'25\")\n",
+    "tier1_data = xl.parse(\"TIER1_5 Mar'25\")\n",
+    "ttrl_data = xl.parse(\"TTRL_3 Mar'25\")\n",
+    "pdmt_data = xl.parse(\"PDMT_1Jan'25\", usecols=[0], names=[\"Insider Name\"])\n",
+    "\n",
+    "# Standardizing column names\n",
+    "conso_data.columns = conso_data.columns.str.strip()\n",
+    "girs_data.columns = girs_data.columns.str.strip()\n",
+    "tier1_data.columns = tier1_data.columns.str.strip()\n",
+    "ttrl_data.columns = ttrl_data.columns.str.strip()\n",
+    "pdmt_data.columns = pdmt_data.columns.str.strip()\n",
+    "\n",
+    "# Step 1: Add Lookup Data\n",
+    "conso_data[\"GIRS Role\"] = conso_data[\"Employee ID\"].map(girs_data.set_index(\"Employee ID\")[\"Role\"])\n",
+    "conso_data[\"Tier1\"] = conso_data[\"Employee ID\"].isin(tier1_data[\"Employee ID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "conso_data[\"TTRL\"] = conso_data[\"Employee ID\"].isin(ttrl_data[\"Employee ID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "conso_data[\"PDMR\"] = conso_data[\"Insider Name\"].isin(pdmt_data[\"Insider Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Step 2: Categorization\n",
+    "insider_list = conso_data[(conso_data[\"Tier1\"] == \"Yes\") | (conso_data[\"TTRL\"] == \"Yes\") | (conso_data[\"PDMR\"] == \"Yes\")]\n",
+    "change_to_inactive = conso_data[(conso_data[\"GIRS Role\"] == \"Non-Core\")]\n",
+    "new_entries = conso_data[(conso_data[\"Tier1\"] == \"No\") & (conso_data[\"TTRL\"] == \"No\") & (conso_data[\"PDMR\"] == \"No\") & (conso_data[\"Status\"] == \"ADD\")]\n",
+    "\n",
+    "# Step 3: Save the processed data\n",
+    "with pd.ExcelWriter(\"Processed_GIRS.xlsx\") as writer:\n",
+    "    insider_list.to_excel(writer, sheet_name=\"Insider_List\", index=False)\n",
+    "    change_to_inactive.to_excel(writer, sheet_name=\"Change_to_Inactive\", index=False)\n",
+    "    new_entries.to_excel(writer, sheet_name=\"New_Entries\", index=False)\n",
+    "\n",
+    "print(\"Processing complete! Check Processed_GIRS.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43c2d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce57dc47",
+   "id": "c53646d6",
    "metadata": {},
    "outputs": [],
    "source": [
