--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,54 +3,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83941d1c",
+   "id": "37bd6bb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the Excel file\n",
-    "file_path = \"GIRS.xlsx\"\n",
+    "# Load Excel file\n",
+    "file_path = \"your_excel_file.xlsx\"\n",
     "xl = pd.ExcelFile(file_path)\n",
     "\n",
-    "# Load Sheets\n",
-    "conso_data = xl.parse(\"Conso Data\")\n",
-    "girs_data = xl.parse(\"GIRS Extract_20 Mar'25\")\n",
-    "tier1_data = xl.parse(\"TIER1_5 Mar'25\")\n",
-    "ttrl_data = xl.parse(\"TTRL_3 Mar'25\")\n",
-    "pdmt_data = xl.parse(\"PDMT_1Jan'25\", usecols=[0], names=[\"Insider Name\"])\n",
+    "# Load necessary sheets\n",
+    "df_conso = xl.parse(\"Conso Data\")\n",
+    "df_girs = xl.parse(\"GIRS\")\n",
+    "df_tier = xl.parse(\"Tier_Data\")\n",
+    "df_ttrl = xl.parse(\"TTRL_Data\")\n",
+    "df_pdmr = xl.parse(\"PDMR_Data\")\n",
     "\n",
-    "# Standardizing column names\n",
-    "conso_data.columns = conso_data.columns.str.strip()\n",
-    "girs_data.columns = girs_data.columns.str.strip()\n",
-    "tier1_data.columns = tier1_data.columns.str.strip()\n",
-    "ttrl_data.columns = ttrl_data.columns.str.strip()\n",
-    "pdmt_data.columns = pdmt_data.columns.str.strip()\n",
+    "# Remove extra spaces & standardize case\n",
+    "def clean_dataframe(df):\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    return df.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
     "\n",
-    "# Step 1: Add Lookup Data\n",
-    "conso_data[\"GIRS Role\"] = conso_data[\"Employee ID\"].map(girs_data.set_index(\"Employee ID\")[\"Role\"])\n",
-    "conso_data[\"Tier1\"] = conso_data[\"Employee ID\"].isin(tier1_data[\"Employee ID\"]).map({True: \"Yes\", False: \"No\"})\n",
-    "conso_data[\"TTRL\"] = conso_data[\"Employee ID\"].isin(ttrl_data[\"Employee ID\"]).map({True: \"Yes\", False: \"No\"})\n",
-    "conso_data[\"PDMR\"] = conso_data[\"Insider Name\"].isin(pdmt_data[\"Insider Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "df_conso = clean_dataframe(df_conso)\n",
+    "df_girs = clean_dataframe(df_girs)\n",
+    "df_tier = clean_dataframe(df_tier)\n",
+    "df_ttrl = clean_dataframe(df_ttrl)\n",
+    "df_pdmr = clean_dataframe(df_pdmr)\n",
     "\n",
-    "# Step 2: Categorization\n",
-    "insider_list = conso_data[(conso_data[\"Tier1\"] == \"Yes\") | (conso_data[\"TTRL\"] == \"Yes\") | (conso_data[\"PDMR\"] == \"Yes\")]\n",
-    "change_to_inactive = conso_data[(conso_data[\"GIRS Role\"] == \"Non-Core\")]\n",
-    "new_entries = conso_data[(conso_data[\"Tier1\"] == \"No\") & (conso_data[\"TTRL\"] == \"No\") & (conso_data[\"PDMR\"] == \"No\") & (conso_data[\"Status\"] == \"ADD\")]\n",
+    "# Extract unique PSIDs\n",
+    "unique_psids = df_conso[[\"PSID\", \"Resource Name\", \"Email\"]].drop_duplicates()\n",
     "\n",
-    "# Step 3: Save the processed data\n",
-    "with pd.ExcelWriter(\"Processed_GIRS.xlsx\") as writer:\n",
-    "    insider_list.to_excel(writer, sheet_name=\"Insider_List\", index=False)\n",
-    "    change_to_inactive.to_excel(writer, sheet_name=\"Change_to_Inactive\", index=False)\n",
-    "    new_entries.to_excel(writer, sheet_name=\"New_Entries\", index=False)\n",
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
     "\n",
-    "print(\"Processing complete! Check Processed_GIRS.xlsx\")\n"
+    "# Merge Tier1 & TTRL status\n",
+    "unique_psids[\"Tier1\"] = unique_psids[\"PSID\"].isin(df_tier[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "unique_psids[\"TTRL\"] = unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Merge PDMR status\n",
+    "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Extract unique team names from Conso Data Tab Data column\n",
+    "unique_teams = df_conso[\"Tab Data\"].str.split(\",\").explode().str.strip().unique()\n",
+    "\n",
+    "# Initialize team columns with N/A\n",
+    "for team in unique_teams:\n",
+    "    unique_psids[team] = \"N/A\"\n",
+    "\n",
+    "# Update team status based on Conso Data\n",
+    "for _, row in df_conso.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    status = row[\"Status\"]\n",
+    "    teams = row[\"Tab Data\"].split(\",\")\n",
+    "    for team in teams:\n",
+    "        team = team.strip()\n",
+    "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
+    "\n",
+    "# Save the final processed data\n",
+    "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace') as writer:\n",
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43c2d21",
+   "id": "b6b42ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c53646d6",
+   "id": "2735d29f",
    "metadata": {},
    "outputs": [],
    "source": [
